# enterprise-rag-eval-lab

./: .gitignore  BLOG.md  Dockerfile  README.md  SPEC.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml
docs/: DEPLOY.md  index.md
examples/: benchmark.py  bm25_demo.py  eval_dataset.json  eval_results.json  hybrid_retrieval_demo.py  leaderboard_eval.py  run_benchmark.py  run_evaluation.py  run_leaderboard.py  vector_demo.py
src/rag_lab/: __init__.py  cli.py  models.py
src/rag_lab/api/: app.py
src/rag_lab/chunking/: __init__.py  chunker.py
src/rag_lab/evaluation/: evaluator.py
src/rag_lab/ingestion/: ingestion.py  parser.py  pdf_parser.py
src/rag_lab/reranking/: reranker.py
src/rag_lab/retrieval/: bm25.py  hybrid.py  vector.py
src/rag_lab/ui/: app.py
tests/: test_api.py  test_basic.py  test_bm25.py  test_chunking.py  test_evaluation.py  test_hybrid.py  test_ingestion.py  test_pdf.py  test_reranking.py  test_vector.py
tests/fixtures/: bm25_guide.txt  rag_overview.md  sample.html  sample.md  sample.txt  vector_search.html
