[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-lab"
version = "0.1.0"
description = "Enterprise RAG Evaluation Lab"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Application Engineer", email = "engineer@example.com"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sentence-transformers>=2.5.0",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "numpy>=1.24.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
rag-lab = "rag_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
